🔧 Fix: Add test endpoints and make rentabilidades modal smaller

--- a/templates/index.html
+++ b/templates/index.html
@@ -315,7 +315,7 @@
 
     <!-- Rentabilidades Upload Modal -->
     <div class="modal fade" id="rentabilidadesModal" tabindex="-1">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">
